--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         />
                     </div>
                     <button onClick= {reset}>Reset</button>
-                    <button onClick= {onFlip}>Flip</button>
+                    <button onClick= {onFlip}>{inverted ? "Turn back":"Invert"}</button>
                 </div>
             );
         } 
